@@ -17,6 +17,7 @@ dependencies {
 
 tasks.withType(Test).configureEach {
     jvmArgs += [
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
         "--add-opens=java.base/java.nio=ALL-UNNAMED",
         "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"
     ]
@@ -34,6 +35,7 @@ graalvmNative {
     binaries {
         all {
             buildArgs.addAll([
+                '--add-opens=java.base/java.lang=ALL-UNNAMED',
                 '--add-opens=java.base/java.nio=ALL-UNNAMED',
                 '--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED'
             ])
